def mainClassName = "pro.gravit.launchermodules.remotecontrol.RemoteControlModule"

sourceCompatibility = '21'
targetCompatibility = '21'

jar {
    manifest.attributes("Module-Main-Class": mainClassName)
}
